--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,6 @@ RewriteBase /proyecto-php/
 ErrorDocument 404 /proyecto-php/errores/404.php
 
 RewriteRule ^home$ pages/index.php [L]
-RewriteRule ^users$ pages/users.php [L]
+RewriteRule ^registerUser$ pages/users.php [L]
+RewriteRule ^listUsers$ pages/usuarios/listarUsuarios.php [L]
 
