--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,8 @@ ErrorDocument 404 /proyecto-php/errores/404.php
 
 RewriteRule ^home$ pages/index.php [L]
 RewriteRule ^registerUser$ pages/users.php [L]
+RewriteRule ^registerCompanies$ pages/company.php [L]
 RewriteRule ^listUsers$ pages/usuarios/listarUsuarios.php [L]
+RewriteRule ^listEmpresas$ pages/company/listarEmpresas.php [L]
+RewriteRule ^listMascotas$ pages/mascotas/listarMascotas.php [L]
 
